<resources>
    <string name="app_name">Villim</string>
    <string name="google_maps_key">AIzaSyC0Ui9AQ7SMfnXl6QEreRtDMol4_zD1MoM</string>
    <string-array name="tab_items">
        <item>숙소 찾기</item>
        <item>내 열쇠</item>
        <item>방문목록</item>
        <item>프로필</item>
    </string-array>
    <string name="drawer_open">메뉴 열기</string>
    <string name="drawer_close">메뉴 닫기</string>
    <string name="key_host_name">host_name</string>
    <string name="key_host_review_rating">host_review_rating</string>
    <string name="key_host_review_count">key_host_review_count</string>
    <string name="key_tags">tags</string>
    <string name="key_num_guests">num_guests</string>
    <string name="key_num_rooms">num_rooms</string>
    <string name="key_num_beds">num_beds</string>
    <string name="key_num_baths">num_baths</string>
    <string name="key_visit">visit</string>
    <string name="all_locations">모든 위치</string>
    <string name="search_hint_date">날짜 설정</string>
    <string name="search_filter_date_format">%1$d월%2$d일 - %3$d월%4$d일</string>
    <string name="search_filter_title">검색하기</string>
    <string name="search_hint">어디로 가세요?</string>
    <string name="search_from_date">부터</string>
    <string name="search_to_date">까지</string>
    <string name="search_choose_date">\u0020 날짜 선택하기</string>
    <string name="search_date_between">~</string>
    <string name="search_date_format">\u0020 %1$d년 %2$d월 %3$d일</string>
    <string name="no_date">날짜 미정</string>
    <string name="search_popular_locations">인기지역</string>
    <string name="invalid_date_selected">내일 날짜부터 예약할 수 있습니다.</string>
    <string name="date_filter_title">날짜 선택</string>
    <string name="date_filter_save_date">저장하기</string>
    <string name="date_filter_start_date">시작일</string>
    <string name="date_filter_end_date">종료일</string>
    <string name="date_filter_date_text_format">%1$d월 %2$d일</string>
    <string name="monday">월요일</string>
    <string name="tuesday">화요일</string>
    <string name="wednesday">수요일</string>
    <string name="thursday">목요일</string>
    <string name="friday">금요일</string>
    <string name="saturday">토요일</string>
    <string name="sunday">일요일</string>
    <string name="select_different_dates">시작일과 종료일이 같을 수 없습니다.</string>
    <string name="book_at_least_a_month">최소 입주 기간은 한 달입니다.</string>
    <string name="month_name_format">LLLL yyyy\n</string>
    <string name="key_house">key_house</string>
    <string name="room_price_value">%s / 월</string>
    <string name="review_count_text">후기 %d개</string>
    <string name="room_detail_title">방 정보</string>
    <string name="contact_host">호스트에게 연락</string>
    <string name="num_guest_format">인원 %d명</string>
    <string name="num_bedroom_format">방 %d개</string>
    <string name="num_bed_format">침대 %d개</string>
    <string name="num_bathroom_format">욕실 %d개</string>
    <string name="description_title">방 설명</string>
    <string name="amenities_title">시설</string>
    <string name="reviews_title">후기</string>
    <string name="see_more">+ 더보기</string>
    <string name="read_more">읽기</string>
    <string name="price_policy">가격 정책</string>
    <string name="house_policy">숙소 이용규칙</string>
    <string name="cancellation_policy">환불 정책</string>
    <string name="cancellation_strict">엄격</string>
    <string name="amenities_see_more_format">+%d개</string>
    <string name="reviews_see_more_format">+%d개 후기 더보기</string>
    <string name="reviews_no_review">아직 작성된 후기가 없습니다.</string>
    <string name="reserve">예약하기</string>
    <string name="book">입주 신청하기</string>
    <string name="price_text_format">₩ %1$s / %2$d일</string>
    <string name="price_text_format_no_date">₩ %s / 월</string>
    <string name="amenity_bedsheet">침대시트</string>
    <string name="amenity_wifi">무선 인터넷</string>
    <string name="amenity_tv">TV</string>
    <string name="amenity_cooking_utensil">취사도구/식기</string>
    <string name="amenity_iron">다리미</string>
    <string name="amenity_desk">책상/작업공간</string>
    <string name="amenity_towel">수건</string>
    <string name="amenity_ac">에어컨</string>
    <string name="amenity_computer">컴퓨터</string>
    <string name="amenity_fridge">냉장고</string>
    <string name="amenity_hair_dryer">헤어드라이기</string>
    <string name="amenity_smoke_detector">연기 감지기</string>
    <string name="amenity_first_aid">비품</string>
    <string name="amenity_heating">난방</string>
    <string name="amenity_cooking_electronics">취사 가전제품</string>
    <string name="amenity_washer">세탁기</string>
    <string name="amenity_closet">옷장/서랍장</string>
    <string name="amenity_fire_extinguisher">소화기</string>
    <string name="myroom_title">내 방</string>
    <string name="myroom_key_expiration_date">열쇠 유효기간</string>
    <string name="myroom_change_passcode">도어락 비밀번호 변경</string>
    <string name="open_room">열림</string>
    <string name="passcode_title">도어락 설정</string>
    <string name="passcode_title_2">도어락 비밀번호 변경</string>
    <string name="passcode_instructions">설정 방법\n
    1. 아래 칸에 비밀번호 입력\n
    2. 설정 후 도어락 앞에서 확인 버튼 클릭</string>
    <string name="passcode_new">비밀번호</string>
    <string name="passcode_new_confirm">비밀번호 확인</string>
    <string name="passcode_change_done">확인</string>
    <string name="passcode_change_cancel">취소</string>
    <string name="visit_title">방문 목록</string>
    <string name="visit_date">방문 날짜</string>
    <string-array name="profile_items_logged_in">
        <item>로그아웃</item>
        <item>프로필 보기 및 수정</item>
        <item>FAQ</item>
        <item>환경 설정</item>
        <item>개인정보 보호 및 이용약관</item>
    </string-array>
    <string-array name="profile_items_logged_out">
        <item>로그인</item>
        <item>FAQ</item>
        <item>환경 설정</item>
        <item>개인정보 보호 및 이용약관</item>
    </string-array>
    <string name="profile">프로필</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="profile_title">프로필 보기 및 수정</string>
    <string name="settings">환경 설정</string>
    <string name="faq">FAQ</string>
    <string name="privacy_policy">개인정보 보호 및 이용약관</string>
    <string name="advert_title">전세계의 집이 나의 집!</string>
    <string name="advert_detail">언제 어디서나 쉽고 빠르게 방을 빌리세요.</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="forgot_password">비밀번호를 잊으셨나요?</string>
    <string name="signup">회원가입</string>
    <string name="next">다음</string>
    <string name="server_error">서버가 불안정합니다. 잠시 후 시도해주세요.</string>
    <string name="signup_error">회원가입 하지 못 했습니다. 디시 시도해주세요.</string>
    <string name="firstname">이름</string>
    <string name="lastname">성</string>
    <string name="signup_welcome">빌림에 오신것을 환영합니다</string>
    <string name="consent_first_half">로그인하면 당사의\u0020</string>
    <string name="terms_of_service">서비스 이용약관</string>
    <string name="consent_second_half">에 동의하는 것으로 간주됩니다.</string>
    <string name="empty_field">모든 항목을 작성해주세요.</string>
    <string name="my_key"></string>
    <string name="write_review">후기 작성</string>
    <string name="change_doorlock_passcode">도어락 비밀번호 변경</string>
    <string name="no_reserved_room">아직 빌린 방이 없습니다.</string>
    <string name="open_doorlock">도어락 잠금 해제</string>
    <string name="find_room">방 찾아보기</string>
    <string name="open_room_error">문제가 발생했습니다. 다시 시도해 주세요.</string>
    <string name="cant_connect_to_server">서버에 연결할 수 없습니다</string>
    <string name="stay_duration_format">유효기간  %1$d.%2$d.%3$d - %4$d.%5$d.%6$d</string>
    <string name="doorlock_open_success">도어락을 열었습니다.</string>
    <string name="basic_description">기본 설명</string>
    <string name="base_price">기본 금액</string>
    <string name="base_monthly_price">임대료 (일시불 선불)</string>
    <string name="base_monthly_price_explanation_1">월 수 x 월세 + 추가로 사용하는 일 수 일일계산</string>
    <string name="base_monthly_price_explanation_2">시작일 및 종료일은 월 단위로 계산되며, 그 외 추가 일 수는 일일 계산됩니다.</string>
    <string name="utility_fee">관리비</string>
    <string name="utility_fee_long">관리비 (일시불 선불)</string>
    <string name="utility_fee_explanation_1" formatted="false">임대료의 15~20%\n3월 - 5월 및 9월 - 11월 임대료의 15%\n6월 - 8월 및 12월 - 2월 임대료의 20%</string>
    <string name="utility_fee_explanation_2">공과금 목록: 전기, 수도, 난방, 주차, 통신비 (인터넷 및 IP TV)</string>
    <string name="cleaning_fee">퇴실 청소비</string>
    <string name="cleaning_fee_long">퇴실 청소비 (일시불 선불)</string>
    <string name="deposit">보증금</string>
    <string name="additional_guest_fee">추가 인원 요금</string>
    <string name="won_text_format">%d원</string>
    <string name="won_symbol_format">₩ %s</string>
    <string name="no_deposit">보증금 없음</string>
    <string name="no_additional_fee">추가요금 없음</string>
    <string name="cant_query">불러올 수 없음</string>
    <string name="direction_format">오시는 길\n(마커를 클릭하면 화면 하단에 구글 맵 툴바가 나타납니다)\n%s</string>
    <string name="review">후기</string>
    <string name="review_count_format">후기 %d개</string>
    <string name="accuracy">정확성</string>
    <string name="communication">의사소통</string>
    <string name="cleanliness">청결도</string>
    <string name="location">위치</string>
    <string name="checkin">체크인</string>
    <string name="value">가치</string>
    <string name="review_date_format">%1$d년 %2$d월</string>
    <string name="villim_reserve">빌림요청</string>
    <string name="overview_title_format_hasdate">%1$s에서 %2$d박</string>
    <string name="overview_title_format_nodate">%s</string>
    <string name="host">호스트</string>
    <string name="duration">기간</string>
    <string name="number_of_nights">입주일 수</string>
    <string name="price">금액</string>
    <string name="select_start_Date">시작일 선택</string>
    <string name="select_end_date">종료일 선택</string>
    <string name="not_selected">미정</string>
    <string name="num_nights_format">%d일</string>
    <string name="overview_info_format">인원 %1$d명, 방 %2$d개, 침대 %3$d개, 욕실 %4$d개</string>
    <string name="must_select_date">시작일과 종료일을 선택해주세요.</string>
    <string name="request_visit">방문 신청하기</string>
    <string name="date_string_format">"%1$04d-%2$02d-%3$02d"</string>
    <string name="reservation_success">빌림 요청 완료</string>
    <string name="reservation_success_instruction_format">빌림요청이 완료되었습니다.\n곧 빌림에서 6시간 이내에 연락이 갈 예정입니다.</string>
    <string name="reservation_code">예약번호</string>
    <string name="reservation_guest">예약자</string>
    <string name="reservation_date">예약 일자</string>
    <string name="reservation_status">예약 상태</string>
    <string name="status_pending">대기중</string>
    <string name="status_confirmed">예약 완료</string>
    <string name="status_active">거주중</string>
    <string name="status_done">방문 완료</string>
    <string name="no_visit_list">방문 신청한 방이 없습니다.</string>
    <string name="visit_list">방문 목록</string>
    <string name="my_visit_list">내 방문목록</string>
    <string name="villim_request">빌림 요청하기</string>
    <string name="show_location">위치 보기</string>
    <string name="cancel_visit">방문 취소신청</string>
    <string name="cancel_visit_confirm">정말 방문을 취소 하시겠습니까?</string>
    <string name="configure_doorlock">도어락 설정</string>
    <string name="passcode_different">두 비밀번호가 일치하지 않습니다.</string>
    <string name="passcode_non_digit">숫자 비밀번호만 설정할 수 있습니다.</string>
    <string name="passcode_too_short">비밀번호가 너무 짧습니다.</string>
    <string name="passcode_too_long">비밀번호가 너무 깁니다.</string>
    <string name="confirm">확인</string>
    <string name="passcode_hint">비밀번호 (4~12자)</string>
    <string name="passcode_confirm_hint">비밀번호 확인 (4~12자)</string>
    <string name="passcode_change_complete">비밀번호가 변경되었습니다.</string>
    <string name="passcode_change_complete_instructions">이제부터 변경된 비밀번호로\n도어락 잠금해제를 할 수 있습니다.</string>
    <string name="rating">별점</string>
    <string name="rate_rating">별점주기</string>
    <string name="review_content_field_hint">400자 이내로 작성해주세요.</string>
    <string name="submit">등록</string>
    <string name="review_posted">후기가 등록되었습니다.</string>
    <string name="apply">적용</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="message_sent">메시지가 전송되었습니다.</string>
    <string name="password_reset_link_sent">비밀번호를 재설정할 수 있는 링크가 포함된 Villim 메시지가 발송되었습니다.</string>
    <string name="send_again">재전송</string>
</resources>