<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasscodeSuccessActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@android:color/white"
        android:elevation="@dimen/toolbar_elevation"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/ToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/configure_doorlock"
            android:textColor="@color/toolbar_title_color" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/lock_imageview"
            android:layout_width="65dp"
            android:layout_height="65dp" />

        <TextView
            fontPath="fonts/NotoSansCJKkr-Medium.otf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/passcode_change_complete"
            android:textColor="#05060b"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="6sp"
            android:text="@string/passcode_change_complete_instructions"
            android:textColor="#585757"
            android:textSize="14sp" />


    </LinearLayout>


    <!-- Done button -->
    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/next_button_height"
        android:layout_alignParentBottom="true"
        android:background="@drawable/next_button"
        android:text="@string/confirm"
        android:textColor="@drawable/next_button_text"
        android:textSize="@dimen/next_button_text_size" />

</RelativeLayout>
