<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="net.villim.villim.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@android:color/white"
        android:elevation="@dimen/toolbar_elevation"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/ToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/toolbar_title_color" />

    </android.support.v7.widget.Toolbar>

    <!-- 광고 문구 -->
    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/advertContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/advert_container_margin_top"
        android:orientation="vertical"
        android:paddingLeft="@dimen/login_activity_padding"
        android:paddingRight="@dimen/login_activity_padding">

        <TextView
            android:id="@+id/advertTitle"
            fontPath="fonts/BMDOHYEON.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advert_title"
            android:textColor="#05060b"
            android:textSize="@dimen/advert_title_text_size" />

        <TextView
            android:id="@+id/advertDetail"
            fontPath="fonts/NotoSansCJKkr-DemiLight.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/advert_detail"
            android:textSize="@dimen/advert_detail_text_size" />

    </android.support.v7.widget.LinearLayoutCompat>

    <!-- Login form -->
    <RelativeLayout
        android:id="@+id/login_form_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/advertContainer"
        android:paddingBottom="@dimen/search_filter_padding"
        android:paddingLeft="@dimen/login_activity_padding"
        android:paddingRight="@dimen/login_activity_padding"
        android:paddingTop="@dimen/search_filter_upper_padding">

        <EditText
            android:id="@+id/login_form_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:layout_centerHorizontal="true"
            android:background="@drawable/login_field"
            android:drawablePadding="@dimen/filter_icon_drawable_padding"
            android:gravity="left|center_vertical"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/login_form_text"
            android:textColorHint="@color/login_form_hint"
            android:textSize="@dimen/login_form_text_size" />

        <EditText
            android:id="@+id/login_form_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:layout_below="@id/login_form_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_field"
            android:drawablePadding="@dimen/filter_icon_drawable_padding"
            android:gravity="left|center_vertical"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/login_form_text"
            android:textColorHint="@color/login_form_hint"
            android:textSize="@dimen/login_form_text_size" />

        <TextView
            android:id="@+id/error_message"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:layout_below="@id/login_form_password"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:textColor="@color/login_error_text"
            android:textSize="@dimen/login_error_message_text_size" />

    </RelativeLayout>

    <!-- Find password & signup -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/next_button"
        android:paddingBottom="@dimen/login_activity_padding"
        android:paddingLeft="@dimen/login_activity_padding"
        android:paddingRight="@dimen/login_activity_padding">

        <Button
            android:id="@+id/find_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@android:color/transparent"
            android:gravity="left|center_vertical"
            android:text="@string/forgot_password"
            android:textColor="@drawable/login_help_button_text"
            android:textSize="@dimen/login_help_button_text_size" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:gravity="right|center_vertical"
            android:text="@string/signup"
            android:textColor="@drawable/login_help_button_text"
            android:textSize="@dimen/login_help_button_text_size" />

    </RelativeLayout>

    <!-- Done button -->
    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/next_button_height"
        android:layout_alignParentBottom="true"
        android:background="@drawable/next_button"
        android:text="@string/next"
        android:textColor="@drawable/next_button_text"
        android:textSize="@dimen/next_button_text_size" />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/loading_indicator"
        style="@style/AVLoadingIndicatorView.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        app:indicatorColor="@color/loading_animation_color"
        app:indicatorName="BallGridPulseIndicator" />

</RelativeLayout>
