<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myroom_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="@dimen/toolbar_height"
    tools:context="net.villim.villim.MyKeyFragment">

    <!-- Title -->
    <TextView
        android:id="@+id/room_name"
        style="@style/h1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/myroom_title" />

    <!-- Thumbnail -->
    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/room_thumbnail"
        android:layout_width="@dimen/room_thumbnail_image_diameter"
        android:layout_height="@dimen/room_thumbnail_image_diameter"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp" />

    <!-- Key expiration text -->
    <TextView
        android:id="@+id/key_expiration_text"
        style="@style/h3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/myroom_key_expiration_date" />

    <!-- Key expiration date -->
    <TextView
        android:id="@+id/key_expiration_date"
        style="@style/h3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <!-- Change passcode Button -->
    <Button
        android:id="@+id/change_passcode_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:background="@drawable/change_passcode_button_rounded_rectangle"
        android:gravity="center"
        android:text="@string/myroom_change_passcode" />


    <include layout="@layout/bottom_bar" />


</LinearLayout>