<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindPasswordSuccessActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@android:color/white"
        android:elevation="@dimen/toolbar_elevation"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/ToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/find_password"
            android:textColor="@color/toolbar_title_color" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/plane_imageview"
            android:layout_width="65dp"
            android:layout_height="65dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/message_sent"
            android:textColor="#05060b"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/instruction_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="6sp"
            android:maxWidth="300dp"
            android:text="@string/password_reset_link_sent"
            android:textColor="#585757"
            android:textSize="14sp" />

        <TextView
            android:layout_marginTop="15dp"
            android:id="@+id/error_message"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:layout_below="@id/instruction_text"
            android:background="@android:color/transparent"
            android:gravity="center_horizontal"
            android:textColor="@color/login_error_text"
            android:textSize="@dimen/login_error_message_text_size" />

    </LinearLayout>

    <!-- Bottom buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/next_button_height"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <!-- Send again button -->
        <Button
            android:id="@+id/send_again_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/send_again_button"
            android:text="@string/send_again"
            android:textColor="@drawable/next_button_text"
            android:textSize="@dimen/next_button_text_size" />

        <!-- Confirm button -->
        <Button
            android:id="@+id/confirm_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/next_button"
            android:text="@string/confirm"
            android:textColor="@drawable/next_button_text"
            android:textSize="@dimen/next_button_text_size" />
    </LinearLayout>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/loading_indicator"
        style="@style/AVLoadingIndicatorView.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        app:indicatorColor="@color/loading_animation_color"
        app:indicatorName="BallGridPulseIndicator" />

</RelativeLayout>
